tests/ui/anyndarray.stderr
error: Expected <..> generic parameter.
 --> tests/ui/anyndarray.rs:4:23
  |
4 | pub fn any_str_len(s: AnyIter(AnyString)) -> Result<usize, anyhow::Error> {
  |                       ^^^^^^^^^^^^^^^^^^
